# Akis-Kostakis-Diploma-Thesis

./: .clang-format  .dockerignore  .gitignore  AttitudeEstimation.sln  AttitudeEstimation.vcxproj  AttitudeEstimation.vcxproj.filters  CLAUDE.md  CMakeLists.txt  ComplementaryFilter.cpp  ComplementaryFilter.hpp  EKFDescitpionEquation.md  EKF_Equations_Reference.md  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  Makefile  README.md  ReportMsc.docx  TODO.txt  Utils.hpp  a.out  analyze_dynamics.py  complentaryFilterMain.cpp  csvreader.hpp  ekfFilter.cpp  ekfFilterMain.cpp  explicitComplementaryFilterMain.cpp  jacobian  jacobian.cpp  mahonyFilterMain.cpp  main.cpp  notes.txt  pch.h  plotDiagrams.py  test_ekf2.cpp  test_predict_vs_truth.cpp
ArchiveDoNotTouch/: CMakeLists.txt  EigenTest.cpp  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  Results.txt  atteion_based_norn_output.txt  ekfFilter.cpp  la.txt  lareg123.txt  lstm_model_epoch_1000_oldnoatten.pt  lstm_model_epoch_1000alldatanosplit.pt  lstm_model_epoch_1000splitanddropout.pt  lstm_model_epoch_500_datasplitNOatten.pt  lstm_model_epoch_500_datasplitNOatten30Pred.pt  results_no_attention_based30predictions.txt  test_predict_real_data.cpp  test_predict_vs_truth.cpp
Data/: accel.csv  angles.csv  dataset_1.csv  gyro.csv
Data/Quadcopter_Datasets/: all_combined.csv  all_combined_reordered.csv  analytis.py  dataset_1.csv  dataset_2.csv  dataset_3.csv  dataset_4.csv  dataset_5.csv  dataset_6.csv  dataset_7.csv  reorder_columns.py
MDFiles/: EKF2_Mathematical_Documentation.md  EKF_Complete_Mathematical_Reference.md  Filter_Verification_Report.md  Future_Work_RNN.md  Mahony_Implementation_Analysis.md  RNN_Hybrid_Architecture.md  RNN_Learning_Guide.md  impl.md
MDFiles/Archive/: Accelerometer_Explanation.md  EKF2_Mathematical_Documentation_Print.md  ExplicitComplementaryFilter_Mathematical_Documentation.md  Explicit_vs_Passive_Mahony_Comparison.md  ExtentedKFEquations.md  KalmanFilterEquations.md  MahonyFilter_Mathematical_Documentation.md  Mahony_Section_II_C_Error_Criteria.md  RNN_Feasibility_Analysis.md
RNN/: .gitignore  Dockerfile  LSTMNetwork.h  LSTMNetworkNoAttention.h  Makefile  README.md  Results.txt  Results900.txt  example  lareg.txt  lareg123128hiddenstate1KEpochs.txt  lstmEval.cpp  lstmExample.cpp  lstmMain.cpp  mainExample.cpp  plot_5sec_timeline.py  plot_architecture.py  plot_comparison.py  plot_dataset_analysis.py  plot_loss_curve.py  plot_multistep_predictions.py  plot_predictions.py  plot_rmse_bar_chart.py  plot_rmse_errors.py  plot_rmse_per_step.py  plot_single_pred.py  results_attention_based.txt  results_attention_based30predictions.txt  results_attention_based30predictions50WindowSize.txt  results_no_attention_30predictions50WindowSize.txt  results_no_attention_30preds.txt  results_no_attention_based.txt  results_no_attetion_10preds.txt  rmse_errors.csv  run_all_evals.sh  threesplitdata.txt
RNN/Python/: hello_lstm.py  (+1 more)
Results/: analyze_dynamics.py  expected_pitch.txt  lstm_predictions.csv  lstm_predictions_old.csv  plotDiagrams.py  plotDiagrams_zoomed.py  plot_filters_comparison.py  predicted_pitch.txt  predicted_pitch_ekf.txt  predicted_pitch_mahony_9.txt  predicted_roll.txt  predicted_roll_complementary.txt  predicted_roll_ekf.txt  temp.py
include/: ComplementaryFilter.hpp  EKF2.hpp  ExplicitComplementaryFilter.hpp  ExtendedKalmanFilter.hpp  MahonyFilter.hpp  Utils.hpp  csvreader.hpp  pch.h
src/: ComplementaryFilter.cpp  EKF2.cpp  ExplicitComplementaryFilter.cpp  ExtendedKalmanFilter.cpp  Jacobian.cpp  MahonyFilter.cpp
(+9 files in other folders)
